--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1>Hello Univerce</h1>
-	<p>new changes</p>
-	<h2>Hello</h2>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit obcaecati perferendis necessitatibus nobis distinctio corrupti adipisci cumque accusamus amet pariatur, ea fugiat harum, architecto veritatis rerum, quis recusandae saepe. Deserunt.</p>
 </body>
 </html>
